# bluerov2_dynamics

./: BlueROV2.py  BlueROV2_thruster_dyn.py  README.md  apt.txt  compare_w_blueROV2.py  pyproject.toml  requirements.txt  setup.py  test_euler.py  test_ode.py  train_bluerov2_koopman.py  train_bluerov2_koopmanEDMDc.py  train_bluerov2_koopmanKernel.py
Koopman/: koopman.py  koopmanCKOR.py  koopmanEDMDc.py  koopmanKernel.py  koopman_cck.py
SAM/: SAM.py  gnc.py  test_sam.py
blue_rov2py/: model.py
fossen/: BlueROV2.py  BlueROV2_thrust.py  README.md  bluerov_torch.py  test_euler.py  test_ode.py  thrust_dynamics.m
models/: pinc_best.pt
rosbags/: bag2csv.py  compare_body_frames.py  create_thrust_torque_csv.py  sanity_checks.py
rosbags/T200/: T200_fit_polynomial.py
rosbags/rosbag2_2025_10_30/: bag2csv.py  compare_body_frames.py  sanity_checks.py
rosbags/rosbag2_2025_10_30/rosbag2_2025_10_30-16_31_20/: metadata.yaml  rosbag2_2025_10_30-16_31_20_0.db3
rosbags/rosbag2_2025_11_06/: bag2csv.py  bag2csv_wrench.py  compare_body_frames.py  create_thrust_torque_csv.py  sanity_checks.py
rosbags/rosbag2_2025_11_06/rosbag2_2025_11_06-manual/: metadata.yaml  rosbag2_2025_11_06-17_48_10_0.db3
rosbags/rosbag2_2025_11_06/rosbag2_2025_11_06-stabilized/: metadata.yaml  (+1 more)
tests/: test_euler.py  test_ode.py
training/: best_results.txt  results.txt  train_sim_brov2_koopmanEDMDc.py  train_tank_brov2_full_comparison.py  train_tank_brov2_koopmanCKOR.py  train_tank_brov2_koopmanEDMDc.py  train_tank_brov2_rk4.py  train_tank_brov2_wrench_comp.py  train_tank_brov2_wrench_quat.py
(+3 files in other folders)
