[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluerov2-koopman"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "scikit-learn", "pandas", "matplotlib"]

[tool.setuptools]
packages = ["Koopman", "fossen"]
py-modules = ["BlueROV2", "BlueROV2_thrust", "BlueROV_david", "LearnedFossen"]